tests/machine/x/cpp/partial_application.error
line 9: ../../../tests/machine/x/cpp/partial_application.cpp:9:10: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
    9 | auto add(auto a, auto b) { return (a + b); }
      |          ^~~~
../../../tests/machine/x/cpp/partial_application.cpp:9:18: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
    9 | auto add(auto a, auto b) { return (a + b); }
      |                  ^~~~
../../../tests/machine/x/cpp/partial_application.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/partial_application.cpp:12:18: error: no matching function for call to ‘add(int)’
   12 |   auto add5 = add(5);
      |               ~~~^~~
../../../tests/machine/x/cpp/partial_application.cpp:9:6: note: candidate: ‘template<class auto:1, class auto:2> auto add(auto:1, auto:2)’
    9 | auto add(auto a, auto b) { return (a + b); }
      |      ^~~
../../../tests/machine/x/cpp/partial_application.cpp:9:6: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/partial_application.cpp:12:18: note:   candidate expects 2 arguments, 1 provided
   12 |   auto add5 = add(5);
      |               ~~~^~~

  8 | 
  9 | auto add(auto a, auto b) { return (a + b); }
 10 | 
